Add tarefas por usuario e poder adicionar uma tarefa

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
             <div class="navbar-logo">Meu Site</div>
             <div class="navbar-buttons">
                 <a href="/logout" class="navbar-button">Logout</a>
+                <a href="/tarefas" class="navbar-button">Tarefas</a>
             </div>
         </nav>
         <h1>Você está logado <br> Olá, {{current_user.nome}}</h1>
