Adicionando links tarefas

--- a/tarefas/templates/tarefas.html
+++ b/tarefas/templates/tarefas.html
@@ -19,4 +19,6 @@
         {% endif %}
     </ul>
     
+    <a href="/" class="">Página Inicial</a>
+    <a href="/tarefas/adicionartarefa" class="">Adicionar tarefa</a>
 </html>
