--- a/tarefas/templates/adicionartarefa.html
+++ b/tarefas/templates/adicionartarefa.html
@@ -15,5 +15,6 @@
             <input type="submit" value="Adicionar" class="">
         </form>
 
+        <a href="/tarefas" class="">Minhas Tarefas</a>
     </body>
 </html>
